--- a/2014-1/handout_linux_2014-1.tex
+++ b/2014-1/handout_linux_2014-1.tex
@@ -6,6 +6,7 @@
 \usepackage{xcolor}
 \usepackage[alf]{abntex2cite}
 \usepackage{url}
+\usepackage{float} % Permite usar [H] nas imagens.
 \definecolor{dark-gray}{gray}{0.20}
 \definecolor{light-gray}{gray}{0.85}
 
@@ -145,7 +146,7 @@ Uma desvantagem que pode ser citada é que não é possível executar os dois si
 
 Um Live CD é uma distro Linux instalada em uma mídia externa como um CD ou pendrive, desse modo é possível utilizá-la sem ter que instalar em sua máquina. Apesar de algumas distros não anunciarem  um Live CD a iso `normal' funciona como um Live CD, por exemplo as distro Ubuntu e Mint não anunciam um Live CD, mas ao colocar a iso em uma mídia pode-se testá-la sem a necessidade de instalar.
 
-A principal desvantagem é que a execução é lenta, pois fica limitada a mesma velocidade de leitura da mídia utilizada, que acaba sendo menor do que a velocidade de leitura de um HD.
+A principal desvantagem é que a execução fica lenta, pois fica limitada a velocidade de leitura da mídia utilizada, que acaba sendo menor do que a velocidade de leitura de um HD.
 
 \begin{figure}[!h]
   \centering
@@ -159,7 +160,7 @@ Na imagem~\ref{fig:ubuntu-live} é possível ver a distro Ubuntu mostrando uma o
 % (TODO Adicionar mais informações sobre alterar a ordem de boot?).
 \begin{itemize}
     \item Colocar a mídia com o live CD no computador.
-    \item Iniciar o computador através daquela mídia, pode ser necessário alterar a ordem de boot na bios.
+    \item Iniciar o computador através daquela mídia, pode ser necessário alterar a ordem de boot na bios (vide~\ref{itm:boot-order}).
     \item Escolher a opção testar, se existir.
 \end{itemize}
 
@@ -168,78 +169,98 @@ Caso você nunca tenha instalado o Linux antes essa parte servirá de apoio dura
 
 Dependendo da distro Linux que for instalada o método de instalação será diferente. Algumas distros tem instaladores gráficos, o que facilita a instalação, enquanto outras tem instaladores por linha de comando, sugiro tentar primeiro uma que tenha um instalador gráfico.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=.5]{imagens/arch-install-01.png}
+    \caption{Instalação da istro Arch, exemplo de instalador por linha de comando.}
+    \label{fig:arch-installer}
+\end{figure}
+
 Um HD é dividido em partições, imagine um quarteirão que possui varias casas, é exatamente isto que uma partição faz, separa o HD em unidades menores. Um computador novo, que venha com o Windows instalado de fábrica, tem todo o HD sendo usado apenas para o Windows. É necessário diminuir o espaço que o Windows está usando e entregar este espaço para o Linux.
 
-O Windows pode ser instalado em apenas uma partição, entretanto a instalação que será mostrada aqui precisa de duas partições para o Linux, uma pequena com o mesmo tamanho da ram, se tiver 6G de ram esta partição deve ter 6G, e outra maior onde será instalado o Linux.
+% O mesmo tamanho da RAM é utilizado para ser possível hibernar caso toda a RAM esteja cheia, referencia https://wiki.archlinux.org/index.php/Suspend_and_Hibernate.
+O Windows pode ser instalado em apenas uma partição, entretanto a instalação que será mostrada aqui precisa de duas partições para o Linux, uma pequena com o mesmo tamanho da ram, se tiver 6G de ram esta partição deve ter 6G, e outra maior onde será instalado o Linux, o tamanho dessa fica a seu critério entretanto 20G seriam o aconselhável para uma instalação pequena.
+% É claro os tamanhos foram sugeridos imaginando que a pessoa usará o Linux apenas para a faculdade, o que a maioria fará... Um pouco menos de 10G é requisitado apenas para instalação base de algumas distros, os outros 10 ficam para o usuário encher de sabe-se lá o que...
 
-Cada uma dessas partições tem um sistema de arquivo, que diz como cada informação deve ser guardada no disco, desse modo organizando-o. Sem um sistema de arquivos seria impossível dizer onde começa e termina cada `coisa' gravada no disco. O windows usa, normalmente, um sistema de arquivo chamado de NTFS enquanto o Linux, nessa instalação, usará o EXT4.
+Cada uma dessas partições tem um sistema de arquivo, que diz como cada informação deve ser guardada no disco, desse modo organizando-o. Sem um sistema de arquivos seria impossível dizer onde começa e termina cada `coisa' gravada no disco. O windows usa um sistema de arquivo chamado de NTFS enquanto o Linux, nessa instalação, usará o EXT4.
 
-O Linux organiza seus arquivos e diretórios de uma forma diferente do Windows, isto é, não existe c:\textbackslash\ no Linux, apenas `\textbackslash' que é chamado de \emph{root} ou raiz. Todo o resto do sistema é instalado a partir da raiz. Depois da raiz nos temos algumas pastas importantes por exemplo \emph{/home} onde fica gravado todos os arquivos do usuário.
+O Linux organiza seus arquivos e diretórios de uma forma diferente do Windows, isto é, não existe c:\textbackslash\ no Linux, apenas `\textbackslash' que é chamado de \emph{root} ou raiz. Todo o resto do sistema é instalado a partir da raiz. Depois da raiz nos temos algumas pastas importantes por exemplo \emph{/home} onde fica gravado todos os arquivos do usuário como fotos, músicas, imagens, etc\dots
 
-A partição menor, aquela com o mesmo tamanho da ram, será usada para \emph{SWAP} que é a memória virtual, basicamente usa-se o HD como se fosse memória RAM.
+A partição menor, aquela com o mesmo tamanho da ram, será usada para \emph{SWAP} que é a memória virtual, basicamente usa-se o HD como memória RAM.
 
 \subsection{Windows}
-A primeira coisa a fazer é reduzir o tamanho de uma partição para liberar espaço. Se o computador tiver apenas o c:\textbackslash será essa partição que iremos diminuir, caso haja mais \emph{drives}, mais letrinhas seguidas de :\textbackslash você pode escolher a maior partição para diminuir.
+A primeira coisa a fazer é reduzir o tamanho de uma partição para liberar espaço. Se o computador tiver apenas o c:\textbackslash\ será essa partição que iremos diminuir, caso haja mais \emph{drives}, mais letrinhas seguidas de :\textbackslash\ você pode escolher a maior partição para diminuir.
 
 \begin{itemize}
     \item Abra o gerenciador de disco.
     \item Procure a partição com maior tamanho, clique com o direito e em diminuir volume.
-    \item Escolha o espaço para diminuir, sugiro no mínimo 25G.
+    \item Escolha o espaço para diminuir, sugerimos 25G.
     \item Espere terminar, se tudo ocorreu bem, deve haver um espaço não alocado no disco.
 \end{itemize}
 
-Após gravar a iso da distro desejada em um mídia como CD ou pendrive, pode-se usar o programa \emph{UNetbootin} para isso, deve-se inicializar o sistema a partir dessa isso. O mais comum seria colocar a iso no PC e este inicializar automaticamente a iso, caso isso não acontece é necessário trocar a ordem de boot.
+Após gravar a iso da distro desejada em um mídia como CD ou pendrive, pode-se usar o programa \emph{UNetbootin} para isso, deve-se inicializar o sistema a partir dessa iso. O mais comum seria colocar a iso no PC e este inicializar automaticamente a iso, caso isso não acontece é necessário trocar a ordem de boot.
 
-\begin{itemize}
-    \item Abra a BIOS ou UEFI\@. Normalmente as teclas \emph{f12}, \emph{esc} tem essa função. Caso nenhuma delas funcione procure a tecla para o seu modelo.
+% Falar de UEFI deixaria as coisas confusas. Adicionar imagens de apoio ?
+\begin{itemize}\label{itm:boot-order}
+    \item Abra a BIOS\@. Normalmente a tecla \emph{f12} ou \emph{esc} tem essa função. Caso nenhuma delas funcione procure a tecla para o seu modelo.
     \item Vá atá a seção BOOT.
-    \item Coloque em primeiro a opção iniciar da mídia desejada, CD ou pendrive, caso a opção errada seja colocada a BIOS/UEFI não ira carregar o Linux.
+    \item Coloque em primeiro a opção iniciar da mídia desejada, CD ou pendrive, caso a opção errada seja colocada a BIOS não ira carregar o Linux.
     \item Reinicie.
 \end{itemize}
-
 
 \subsection{Linux}
 
 Agora o Linux deve ter sido iniciado, espere acabar de carregar e escolha instalar. Aqui será feita a instalação do Elementary OS, entretanto o seu instalador deve possuir opções parecidas.
 
-\begin{figure}[!h]
+Após o Linux iniciar escolha a lingua desejada para a instalação, neste caso inglês, depois escolha a opção instalar, dependendo da distro pode estar escrito de forma diferente. Veja a figura~\ref{fig:elementary-menu}.
+
+\begin{figure}[H]
   \centering
   \includegraphics[scale=.3]{imagens/elementary-install-01.png}
   \caption{Menu de instalação da Elementary OS\@.}
   \label{fig:elementary-menu}
 \end{figure}
 
-Na imagem~\ref{fig:elementary-partition} cria-se a tabela de partições para um disco.
+Uma tela mostrando os requisitos para o sistema ser instalado aparecerá, normalmente uma quantidade de memória disponível, estar conectado a uma fonte de alimentação e estar conectado a internet. Em algumas distros algumas opções a mais podem aparecer como: Instalar \emph{software} não \emph{OSS} de terceiros, escolha se quiser ouvir mp3 ou usar o flash, outra opção comum é baixar \emph{software} durante a instalação, isto irá garantir que os softwares mais novos sejam instalados, entretanto é necessário uma conexão com a internet.
 
-\begin{figure}[!h]
+Na figura~\ref{fig:elementary-install} podemos ver dois `tipos' de instalação. A primeira irá apagar todo o HD e instalar o Linux, escolha APENAS se quiser APAGAR O WINDOWS, caso contrario escolha a segunda o que nós levará a escolher onde instalar o Linux.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=.3]{imagens/elementary-install-03.png}
+  \caption{Tipos de instalação da Elementary OS\@.}
+  \label{fig:elementary-install}
+\end{figure}
+
+
+Na imagem~\ref{fig:elementary-partition} é possível ver o HD identificado como \emph{/dev/sda}, a sua instalação possivelmente mostrará uma nome diferente. Escolha \emph{/dev/sda} e clique no botão `+', isto irá criar uma nova partição. Um menu com as opções para a partição a ser criada abrirá como pode-se ver na figura~\ref{fig:elementary-root}. Altere apenas o tamanho lembre-se de deixar alguns espaço sobrando, em MB, o tipo do sistema de arquivo para EXT4 e em ponto de montagem escolha `/'. Essa partição criada é a raiz do sistema, todo o resto será instalado a partir dela.
+
+Uma segunda partição para SWAP tem que ser criada, repita o processo acima até abrir as opções para a nova partição. Agora, seguindo a figura~\ref{fig:elementary-swap} escolha para o tamanho a mesma quantidade de RAM disponível no sistema, o sistema de arquivo deve ser alterado para SWAP será impossível escolher um ponto de montagem.
+
+\begin{figure}[H]
   \centering
   \includegraphics[scale=.3]{imagens/elementary-install-04.png}
-  \caption{Criação da tabela de partições.}
+  \caption{Criação de partições.}
   \label{fig:elementary-partition}
 \end{figure}
 
-Na imagem~\ref{fig:elementary-root} a `/' raiz do sistema é criada, note que o ponto de montagem foi escolhido e o sistema de arquivos é EXT4\@.
-
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[scale=.3]{imagens/elementary-install-05.png}
   \caption{Criação da partição onde ficará a `/' raiz do sistema.}
   \label{fig:elementary-root}
 \end{figure}
 
-Na imagem~\ref{fig:elementary-swap} será criada a partição de SWAP\@. Como regra para o tamanho dessa partição utilize a mesmo tamanho da ram disponível.
-% O mesmo tamanho da RAM é utilizado para ser possível hibernar caso toda a RAM esteja cheia, referencia https://wiki.archlinux.org/index.php/Suspend_and_Hibernate.
-
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[scale=.3]{imagens/elementary-install-06.png}
   \caption{Criação da partição de SWAP.}
   \label{fig:elementary-swap}
 \end{figure}
 
-Existem algumas configurações que devem ser feitas antes desse menu. A primeira é o horário, simplesmente clique no mapa perto de São Paulo. A segunda é sobre o layout do teclado, novamente selecione português do Brasil. A ultima será sobre o usuário como pode ser vista na imagem~\ref{fig:elementary-info}  
+Agora será perguntada algumas opções mais simples, como o fuso horário e \emph{layout} do teclado. Finalmente você será levada a tela para configurar um novo usuário como na figura~\ref{fig:elementary-info}. Não existe muitas regras aqui, prencha as informações de forma coerente. Finalmente espera a instalação acabar, o pc será reiniciado. Retire a mídia de instalação do PC. Se tudo ocorreu de forma correta você será levada para uma tela de login, o que significa que o Linux foi instalado com sucesso.
 
-\begin{figure}[!h]
+\begin{figure}[H]
   \centering
   \includegraphics[scale=.3]{imagens/elementary-install-10.png}
   \caption{Criando um usuário.}
