corrigindo pequenos typos. Ainda nao finalizado totalmente.

--- a/2014-1/handout_linux_2014-1.tex
+++ b/2014-1/handout_linux_2014-1.tex
@@ -40,7 +40,7 @@ Este sistema foi projetado para ser portável, multi-tarefa e multi-usuário. Si
 \subsection{Tanenbaum e o MINIX}
 Em 1987, Andrew S. Tanenbaum, enquanto professor da Vrije Universiteit em Amsterdã, desenvolveu o \textbf{MINIX} (mini-Unix), um sistema que seguia os mesmos princípios do Unix mas que seria usado somente propósitos educacionais, como material de apoio ao seu livro ``Operating Systems: Design and Implementation'' (em português: ``Sistemas Operacionais: Projeto e Implementação'').
 
-Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos, Linus Torvalds quando da criação de seu próprio sistema operacional, que mais tarde se tornaria o \textit{kernel} do \textbf{Linux}.
+Os princípios aplicados por Tanenbaum no MINIX, influenciaram Linus Torvalds quando da criação de seu próprio sistema operacional, que mais tarde se tornaria o \textit{kernel} do \textbf{Linux}.
 
 % No final do desenvolvimento de seu sistema, Linus compartilhou em um fórum o que havia feito:
 
@@ -180,10 +180,10 @@ Tanto o Windows como o Linux podem ser instalados em apenas uma partição. Para
 
 Cada partições tem um sistema de arquivo, que diz como cada informação deve ser guardada no disco, desse modo organizando-o. Sem um sistema de arquivos seria impossível dizer onde começa e termina cada `coisa' gravada no disco. O windows usa um sistema de arquivo chamado de NTFS enquanto o Linux, nessa instalação, usará o EXT4.
 
-O Linux organiza seus arquivos e diretórios de uma forma diferente do Windows, isto é, não existe c:\textbackslash\ no Linux, apenas `\textbackslash'\ que é chamado de \emph{root} ou raiz. Todo o resto do sistema é instalado a partir da raiz. Depois da raiz nos temos algumas pastas importantes por exemplo \emph{/home} onde fica gravado todos `dados' do usuário como fotos, músicas, imagens, etc\dots
+O Linux organiza seus arquivos e diretórios de uma forma diferente do Windows, isto é, não existe \texttt{c:\textbackslash} no Linux, apenas `\texttt{/}' que é chamado de \emph{root} ou raiz. Todo o resto do sistema é instalado a partir da raiz. Depois da raiz nos temos algumas pastas importantes por exemplo \emph{/home} onde fica gravado todos `dados' do usuário como fotos, músicas, imagens, etc.
 
 \subsection{Windows}
-A primeira coisa a fazer é reduzir o tamanho de uma partição para liberar espaço. Se o computador tiver apenas o c:\textbackslash\ será essa partição que iremos diminuir, caso haja mais \emph{drives} letrinhas seguidas de :\textbackslash\ você pode escolher a maior partição para diminuir.
+A primeira coisa a fazer é reduzir o tamanho de uma partição para liberar espaço. Se o computador tiver apenas o \texttt{c:\textbackslash} será essa partição que iremos diminuir, caso haja mais \emph{drives} letrinhas seguidas de \texttt{:\textbackslash} você pode escolher a maior partição para diminuir.
 
 \begin{itemize}
     \item Abra o gerenciador de disco.
