--- a/2014-1/slides_linux_2014-1.tex
+++ b/2014-1/slides_linux_2014-1.tex
@@ -65,7 +65,7 @@ Dennis Ritchie
 }
 {
    \begin{figure}[!h]
-  \includegraphics[scale=0.2]{imagens/att}
+  \includegraphics[scale=0.2]{imagens/slide/att}
    \end{figure}
 }
 
@@ -143,7 +143,7 @@ Stallman também criou a ``Free Software Foundation'' que administra as licença
 
 
    \begin{figure}[!h]
-  \includegraphics[scale=.8]{imagens/kernel1}
+  \includegraphics[scale=.8]{imagens/slide/kernel1}
    \end{figure}
 
 \end{slide}
@@ -156,29 +156,29 @@ O que se conhece popularmente como Linux, é na verdade apenas o \textit{kernel}
 Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alguns outros \textit{softwares} (em sua maioria GNU, mas não necessariamente) que dão funcionalidade ao sistema.
 
    \begin{figure}[!h]
-  \includegraphics[scale=0.4]{imagens/distro}
+  \includegraphics[scale=0.4]{imagens/slide/distro}
    \end{figure}
 \end{vslide}
 \end{slide}
 
-\begin{slide}{Desktop Environment}
+\begin{slide}{Desktop Environment - GNOME}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.28]{imagens/gnome}
+  \includegraphics[scale=0.25]{imagens/slide/gnome}
    \end{figure}
 \end{slide}
 
-\begin{slide}{Desktop Environment}
+\begin{slide}{Desktop Environment - XFCE}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.3]{imagens/xfce}
+  \includegraphics[scale=0.3]{imagens/slide/xfce}
    \end{figure}
 \end{slide}
 
-\begin{slide}{Desktop Environment}
+\begin{slide}{Desktop Environment - Cinnamon}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.28]{imagens/cinnamon}
+  \includegraphics[scale=0.28]{imagens/slide/cinnamon}
    \end{figure}
 \end{slide}
 
@@ -189,10 +189,18 @@ Window Manager gerencia funções como:
 
 \begin{itemize}
 \item Aparência de janelas.
-\item Comportamento na troca de janelas (alt + Tab).
+\item Bordas de janelas.
+\item Comportamento na troca de janelas (Alt + Tab).
 \end{itemize}
 
 \end{vslide}
+\end{slide}
+
+\begin{slide}{Window Manager}
+  \centering
+	\begin{figure}[!h]
+		\includegraphics[scale=0.28]{imagens/slide/windowManagerTheme}
+	\end{figure}
 \end{slide}
 
 \begin{slide}{Alternativas de uso}
