--- a/2014-1/slides_linux_2014-1.tex
+++ b/2014-1/slides_linux_2014-1.tex
@@ -188,6 +188,7 @@ Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alg
 Window Manager gerencia funções como:
 
 \begin{itemize}
+\setlength{\itemsep}{0.5cm}
 \item Aparência de janelas.
 \item Bordas de janelas.
 \item Comportamento na troca de janelas (Alt + Tab).
@@ -197,22 +198,64 @@ Window Manager gerencia funções como:
 \end{slide}
 
 \begin{slide}{Window Manager}
-  \centering
+Diferentes temas de Window Manager
+	\centering
 	\begin{figure}[!h]
-		\includegraphics[scale=0.28]{imagens/slide/windowManagerTheme}
+		\includegraphics[scale=0.35]{imagens/slide/windowManagerTheme}
 	\end{figure}
 \end{slide}
 
-\begin{slide}{Alternativas de uso}
+\begin{slide}{Alternativas de uso - Máquina Virtual}
+Arquitetura da Máquina Virtual
+	\centering
+	\begin{figure}[!h]
+		\includegraphics[scale=0.50]{imagens/slide/traditional-vs-virtualArchitecture}
+	\end{figure}
+\end{slide}
+\begin{slide}{Alternativas de uso - Dual-Boot}
+GRUB
+	\centering
+	\begin{figure}[!h]
+		\includegraphics[scale=0.55]{imagens/slide/dualBootFedoraGrub}
+	\end{figure}
+\end{slide}
+\begin{slide}{Alternativas de uso - Dual-Boot}
+GParted
+	\centering
+	\begin{figure}[!h]
+		\includegraphics[scale=0.50]{imagens/slide/dualBootGparted}
+	\end{figure}
+\end{slide}
+\begin{slide}{Alternativas de uso - Wine}
+Wine rodando Word
+	\centering
+	\begin{figure}[!h]
+		\includegraphics[scale=0.25]{imagens/slide/wineWord}
+	\end{figure}
+\end{slide}
+
+\begin{slide}{Porquê usar?}
 \begin{vslide}
-
 \begin{itemize}
-\item Máquina Virtual
-\item Dual-boot
-\item Wine
+\setlength{\itemsep}{0.5cm}
+\item	Familiaridade geral com termos e conceitos;
+\item	Aprendizado de boas práticas;
+\item	Gerenciamento de pacotes;
 \end{itemize}
-
 \end{vslide}
 \end{slide}
+
+\begin{slide}{FIM!}
+\begin{vslide}
+Dicas:
+\begin{itemize}
+\setlength{\itemsep}{0.5cm}
+\item	\textbf{Aventure-se!}
+\item	\url{www.google.com}
+\item	\url{psl\_pg@googlegroups.com}
+\end{itemize}
+\end{vslide}
+\end{slide}
+
 
 \end{document}
